<resources>
    <string name="app_name">Here Before</string>
    <string name="title_activity_maps">Here Before</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="new_question">New?</string>
    <string name="use_road_map_view">Use road map view</string>
    <string name="use_satellite_view">Use satellite view</string>
    <string name="use_hybrid_view">Use hybrid view</string>
    <string name="use_terrain_view">Use terrain view</string>
    <string name="take_photo">Take photo</string>
    <string name="record_video">Record video</string>
    <string name="play_icon">Play_icon</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="back">Back</string>
    <string name="email">Email: %1$s</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_email">Send Email</string>
    <string name="feedback">Feedback</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="orUseGoogle">Or Use Google:</string>
    <string name="signIntoExistingAccount">Sign Into Existing Account:</string>
    <string name="createAccountWithPassword">Create Account With Password:</string>
    <string name="report_post">Report Post</string>
    <string name="feedback_warning">As this feedback is anonymous, please provide additional details (e.g. email address) if you want a follow-up with your specific account.</string>
    <string name="you_have_no_dms">You have no DMs</string>
    <string name="atUsername">"@"%1$s</string>
    <string name="new_shape_text_view">Previous messages from your location may load after pressing send.</string>
    <string name="media_button_description">Media button: add an image or video to your message.</string>
    <string name="chat_image_description">Image: A holder for an image you just added.</string>
    <string name="chat_video_description">Video: A holder for the video you just added.</string>
    <string name="send_button_description">Send button: Add your image, video, or message to the chat.</string>
    <string name="recyclerView_image_inside_description">Image: A holder for an image added to the chat from inside the shape.</string>
    <string name="recyclerView_video_inside_description">Video: A holder for a video added to the chat from inside the shape.</string>
    <string name="recyclerView_image_outside_description">Image: A holder for an image added to the chat from outside the shape.</string>
    <string name="recyclerView_video_outside_description">Video: A holder for a video added to the chat from outside the shape.</string>
    <string name="settings_button_description">Settings button: Go to the settings menu without first entering a shape.</string>
    <string name="dms_button_description">Direct Mentions button: Go to your direct mentions without first entering a shape.</string>
    <string name="calculating_distance">"Calculating distance to circle…"</string>
    <string name="message_from_within_circle">"Message from within circle…"</string>
    <string name="message_from_outside_circle">"Message from outside circle…"</string>
    <string name="outside_circle">"Outside circle"</string>
    <string name="distance_outside_circle">%d"m outside circle"</string>
    <string name="inside_circle">"Inside circle"</string>
    <string name="camera_permission_required">"Camera Permission Required"</string>
    <string name="camera_permission_explanation">"Here Before needs permission to use your camera to take pictures and video."</string>
    <string name="audio_permission_required">"Audio Permission Required"</string>
    <string name="audio_permission_explanation">"Here Before needs permission to record audio while recording video."</string>
    <string name="location_permission_required">"Location permission is required. Please enable it manually through the Android settings menu."</string>
    <string name="location_permission_required_explanation">"Here Before needs permission to use your location to find chat areas around you."</string>
    <string name="gps_disabled">"GPS Disabled"</string>
    <string name="gps_disabled_manually">"Please enable your location services on the following screen."</string>
    <string name="prefNotifications">prefNotifications</string>
    <string name="prefTheme">prefTheme</string>
    <string name="prefShowIntro">prefShowIntro</string>
    <string name="prefMapType">prefMapType</string>
    <string name="prefSignOut">prefSignOut</string>
    <string name="navigation_splash_screen">A blank screen shown before the ad loads.</string>

    <string-array name="pref_map_types_entries">
        <item>Road map view</item>
        <item>Satellite view</item>
        <item>Hybrid view</item>
        <item>Terrain view</item>
    </string-array>
</resources>
