<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_above="@id/password"
        android:importantForAutofill="no"
        android:hint="@string/email_address" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_above="@id/signInButton"
        android:importantForAutofill="no"
        android:hint="@string/password" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:layout_centerInParent="true"
        android:text="@string/sign_in" />

    <TextView
        android:id="@+id/newUserQuestionText"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAlignment="center"
        android:layout_below="@id/signInButton"
        android:text="@string/new_question"/>

    <Button
        android:id="@+id/goToCreateAccountButton"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/newUserQuestionText"
        android:text="@string/create_account" />

</RelativeLayout>