<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/createEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_above="@id/createPassword"
        android:importantForAutofill="no"
        android:hint="@string/email_address" />

    <EditText
        android:id="@+id/createPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        android:importantForAutofill="no"
        android:hint="@string/password" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="0dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/createPassword"
        android:text="@string/create_account" />

</RelativeLayout>