<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootViewFeedback"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/loadingIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/chatBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-7112137006158207/1950181503" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/chatBanner">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fillViewport="true"
            tools:ignore="UselessParent">

            <RelativeLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/additionalInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="50dp"
                    android:text="@string/feedback_warning"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/feedbackEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/additionalInfo"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="50dp"
                    android:hint="@string/feedback"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="1000"
                    android:maxLines="4"
                    android:scrollHorizontally="false" />

                <Button
                    android:id="@+id/sendFeedbackButton"
                    android:layout_width="150dp"
                    android:layout_height="65dp"
                    android:layout_below="@id/feedbackEditText"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/send_feedback" />

                <Button
                    android:id="@+id/goBack"
                    android:layout_width="150dp"
                    android:layout_height="65dp"
                    android:layout_below="@id/sendFeedbackButton"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/back" />

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>